Refactor optimization scripts to exclude Evolutionary.jl due to incompatibility with permutation problems. Introduce checks for CMA_ES availability in Metaheuristics.jl and enhance error handling for optimization failures. Update Project.toml to remove unused dependencies and improve comparison outputs with new GA algorithm integration. Add functionality for saving animations with optimized material ordering.

--- a/scripts/optimization/comparison_output/optimizer_comparison_table.tex
+++ b/scripts/optimization/comparison_output/optimizer_comparison_table.tex
@@ -1,5 +1,5 @@
 % Optimizer Comparison Table
-% Generated: 2025-11-24T19:32:29.040
+% Generated: 2025-11-25T23:13:23.157
 
 \begin{table}[h]
 \centering
@@ -9,13 +9,12 @@
 \toprule
 Optimizer & Peak Force (N) & Evaluations & Time (s) & Success \\
 \midrule
-Metaheuristics_DE & 1458.08 & 110 & 7176.4 & \checkmark \\
-Metaheuristics_ES & --- & --- & --- & \times \\
-BlackBoxOptim & 2059.06 & 7 & 8366.1 & \checkmark \\
-Metaheuristics_ECA & 1624.38 & 77 & 2930.6 & \checkmark \\
-Evolutionary & --- & --- & --- & \times \\
-Metaheuristics_PSO & 1686.16 & 5 & 7368.2 & \checkmark \\
-Optim & --- & --- & --- & \times \\
+Metaheuristics_DE & 1686.16 & 5 & 593.7 & \checkmark \\
+BlackBoxOptim & 2155.22 & 7 & 1381.9 & \checkmark \\
+Metaheuristics_ECA & 1686.16 & 5 & 401.3 & \checkmark \\
+Metaheuristics_GA & 1686.16 & 5 & 202.7 & \checkmark \\
+Metaheuristics_PSO & 1686.16 & 5 & 790.1 & \checkmark \\
+Optim & 2911.81 & 6 & 1058.4 & \checkmark \\
 \bottomrule
 \end{tabular}
 \end{table}
